--- a/README
+++ b/README
@@ -24,21 +24,21 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack ndesk-dbus-0.6.0-X-src.tar.bz2
+  unpack ndesk-dbus-0.6.1a-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./ndesk-dbus-0.6.0-X.cygport all
+  cygport ./ndesk-dbus-0.6.1a-X.cygport all
 
 This will create:
-  /usr/src/mono-NDesk-DBus1.0-0.6.0-X.tar.bz2
-  /usr/src/ndesk-dbus-0.6.0-X-src.tar.bz2
+  /usr/src/mono-NDesk-DBus1.0-0.6.1a-X.tar.bz2
+  /usr/src/ndesk-dbus-0.6.1a-X-src.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
 
------ version 0.6.0-2 -----
+----- version 0.6.1a-1 -----
 Initial release for Cygwin 1.7.
 
 
